# SmartHome

SmarHomeController/: CMakeLists.txt
SmarHomeController/SmartHomeControllerApp/: CMakeLists.txt  CMakeLists.txt.autosave
SmarHomeController/SmartHomeControllerApp/UI/: main.qml  qml.qrc
SmarHomeController/SmartHomeControllerApp/UI/screens/: Dashboard.qml  DeviceControl.qml  RoomOverview.qml  Scheduling.qml  SecurityAlerts.qml  Settings.qml  UserProfileSettings.qml  WifiSetting.qml  devices.qml
SmarHomeController/SmartHomeControllerComponents/: CMakeLists.txt  main.cpp
build-SmarHomeController-Desktop_Qt_5_15_8_GCC_64bit-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-SmarHomeController-Desktop_Qt_5_15_8_GCC_64bit-Debug/.cmake/api/v1/reply/: directory-SmartHomeControllerComponents-Debug-d6c8fa0891f4b4855c96.json  target-SmartHomeControllerApp-Debug-a523c955a7e47d67393d.json  target-SmartHomeControllerApp_autogen-Debug-d115a901c3c9346995ce.json  target-SmartHomeControllerComponents-Debug-48864815a9d1f5f3939d.json  target-SmartHomeControllerComponents_autogen-Debug-81c2be8ce100103b5474.json
build-SmarHomeController-Desktop_Qt_5_15_8_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-e553a4305b35c04cd9d5.json  cmakeFiles-v1-aa6a622378b4a39b9a34.json  codemodel-v2-f432c8b659d36c366002.json  index-2024-11-18T08-54-45-0279.json
build-SmarHomeController-Desktop_Qt_5_15_8_GCC_64bit-Debug/SmartHomeControllerComponents/: Makefile  SmartHomeControllerApp  cmake_install.cmake
build-SmarHomeController-Desktop_Qt_5_15_8_GCC_64bit-Debug/SmartHomeControllerComponents/SmartHomeControllerApp_autogen/: moc_predefs.h
build-SmarHomeController-Desktop_Qt_5_15_8_GCC_64bit-Debug/SmartHomeControllerComponents/SmartHomeControllerApp_autogen/ZLERFWCMRQ/: qrc_qml.cpp
